[project]
name = "pybin2ch"
version = "0.1.0"
description = "A python replacement of xxd"
authors = [
    {name = "Zhengyi Li", email = "lizhengyi@pku.edu.cn"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
package-type = "library"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.4",
]
